# 2018Q1

C++/28122017Actiuni/: 28122017Actiuni.cbp  28122017Actiuni.depend  main.cpp
C++/28122017Cutie/: 28122017Cutie.cbp  28122017Cutie.depend  main.cpp
C++/29122017WriteRead/: 29122017WriteRead.cbp  main.cpp  test.txt
C++/CppSalut/: CppSalut.cbp  CppSalut.depend  CppSalut.layout  main.cpp
ChromeExtensions/chrome_app/: manifest.json
CppGame/MyGame/: MyGame.cbp  MyGame.depend  main.cpp
CppGame/SDL2test/: main.c
CppGame/SDLCreateTexture/: SDLCreateTexture.cbp  SDLCreateTexture.depend  main.cpp
CppGame/mySDL01/: mySDL01.cbp
CppGame/mySDL02/: main.cpp  mySDL02.cbp  mySDL02.depend
CppGame/mySDL02V01/: main.cpp  mySDL02.depend
CppGame/mySDL02V02/: main.cpp
CppGame/mySDL02V03/: main.cpp  mySDL02.cbp  mySDL02.depend  mySDL02.layout
GAME_dev/instancing/: Panel.gd  Panel.tscn  ball.scn  container.scn
GAME_dev/my_game/: AnimationPlayer.tscn  engine.cfg
Gtk+/28122017salut/: 01salut.c  README.md  salut
Gtk+/GtkSalut/: GtkSalut.cbp
JavaScriptServer/nodejs/: app.js  app1.js  app2.js  app3.js  logger2.js  writefile.js
KDE/: README.md
KDE/kdeapp/: CMakeLists.txt  kdeapp.cpp  kdeapp.h  kdeapp.kdev4  main.cpp
KDE/kdeapp/.kdev4/: kdeapp.kdev4
KDE/mykdeapp/: CMakeLists.txt  main.cpp  mykdeapp.cpp  mykdeapp.h  mykdeapp.kdev4
KDE/mykdeapp/.kdev4/: mykdeapp.kdev4
KDE/mykdeapp1/: CMakeLists.txt  mykdeapp1.kdev4
KDE/salut/: CMakeLists.txt  main.cpp  salut.cpp  salut.h  salut.kdev4
KDE/salut/.kdev4/: salut.kdev4
ValaEx/salut_mhcrnl_github_com/: salut  (+1 more)
(+5 files in other folders)
